src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_2.snap
---
source: src/parser/test.rs
description: "{1:}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '}'."), (0,2)->(0,3)),
        ),
    },
]

===================================

{1:}
  ^ SyntaxError: Unexpected '}'.
