src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_3_errors.snap
---
source: src/parser/test.rs
description: "{1:2 2:3}"
expression: "parser_errors(\"{1:2 2:3}\", errors)"
---
{1:2 2:3}
     ^ SyntaxError: Expected ',' not found.
