src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_5.snap
---
source: src/parser/test.rs
description: "{1:2"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '}' not found."), (0,3)->(0,4)),
]

===================================

{1:2
   ^ [Error] SyntaxError: Expected '}' not found.
