src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_6.snap
---
source: src/parser.rs
description: "{1:2; 5;"
expression: stmts
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '}' not found."), (0,7)->(0,8)),
]
