src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_6_errors.snap
---
source: src/parser/test.rs
description: "{1:2; 5;"
expression: "parser_errors(\"{1:2; 5;\", errors)"
---
{1:2; 5;
       ^ SyntaxError: Expected '}' not found.
