src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_9_errors.snap
---
source: src/parser/test.rs
description: "{@:2}"
expression: "parser_errors(\"{@:2}\", errors)"
---
{@:2}
 ^ SyntaxError: Unexpected '@'.
