src/parser/snapshots/monkey_language_server__parser__test__if_expr_1.snap
---
source: src/parser.rs
description: "if (x) { x }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Identifier {
            token: Token(Identifier, "x", (0,4)->(0,5)),
            name: "x",
        },
        consequence: Block {
            token: Token(LBrace, "{", (0,7)->(0,8)),
            statements: [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,9)->(0,10)),
                        name: "x",
                    },
                ),
            ],
        },
        alternative: None,
    },
]
