src/parser/snapshots/monkey_language_server__parser__test__if_expr_happy_1.snap
---
source: src/parser/test.rs
description: "if (x) { x }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,9)->(0,10)),
                        name: "x",
                    },
                ],
                range: Range {
                    start: Position {
                        line: 0,
                        character: 7,
                    },
                    end: Position {
                        line: 0,
                        character: 11,
                    },
                },
            },
        ),
        alternative: Ok(
            None,
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 12,
            },
        },
    },
]

===================================

if (x) { x }
